Hardcode hosted CORS origins and remove env-based CORS setting